[FEAT] Next js SSR, Provider 테스트

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
+// tsconfig.json
 {
   "compilerOptions": {
-    "target": "ES2017",
     "lib": [
       "dom",
       "dom.iterable",
@@ -25,11 +25,9 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ],
-      "@api/*": [
-        "./src/types/api/*"
       ]
-    }
+    },
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
