--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
