[FEAT] Setup Panda css

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prepare": "panda codegen",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@pandacss/dev": "^0.53.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
