--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "styled-components": "^5.3.11",
     "zustand": "^5.0.3"
   },
