[FEAT] 위치추적 bridge 등록

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "modoo_toilet_web",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,6 +8,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "dev:https": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
