--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "sass": "^1.86.0",
     "styled-components": "^5.3.11",
     "zustand": "^5.0.3"
   },
