--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@mui/material": "^6.4.3",
+    "@tanstack/react-query": "^5.71.3",
+    "@tanstack/react-query-devtools": "^5.71.3",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.1",
     "next": "15.1.6",
