--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/material": "^6.4.3",
     "@tanstack/react-query": "^5.71.3",
     "@tanstack/react-query-devtools": "^5.71.3",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.1",
+    "js-cookie": "^3.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
