--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.71.3",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.4.1",
     "js-cookie": "^3.0.5",
     "next": "15.1.6",
