--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.1",
     "js-cookie": "^3.0.5",
+    "lottie-react": "^2.4.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
