--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.3",
-    "@tanstack/react-query": "^5.71.3",
-    "@tanstack/react-query-devtools": "^5.71.3",
+    "@tanstack/react-query": "^5.72.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
@@ -30,6 +31,7 @@
     "react-toastify": "^11.0.5",
     "sass": "^1.86.0",
     "styled-components": "^5.3.11",
+    "yarn": "^1.22.22",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
