PRD환경에서 컴포넌트 이름이 난독화되어 바텀시트 안뜨는현상 해결

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "prod": "next build && next start",
     "dev:https": "node server.js",
     "lint": "next lint"
   },
@@ -46,5 +47,6 @@
     "eslint-config-prettier": "^10.0.1",
     "prettier": "^3.4.2",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
