--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.72.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.1",
     "js-cookie": "^3.0.5",
